updated gitignore to include ini files and updated runner to support pytest

--- a/.gitignore
+++ b/.gitignore
@@ -75,7 +75,7 @@ Thumbs.db
 .env.*
 secrets.json
 config.json
-
+*.ini
 # ----------------------------
 # Backup files
 # ----------------------------
